--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-14">
     <div class="left-banner space-y-8 text-center md:text-left">
       <h1 class="text-7xl/tight font-extrabold">It's good <br> tea time at The <br> Tea House</h1>
-      <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-      <button class=" font-bold text-xl px-6 py-4 bg-linear-to-r from-orange-500 to-red-600 rounded-lg text-white">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+      <p class="text-[#777777] font-semibold">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
+        Taste Buds.</p>
+      <button
+        class="cursor-pointer font-bold text-xl px-6 py-4 bg-linear-to-r from-orange-500 to-red-600 rounded-lg text-white">Explore
+        More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
     </div>
     <div class="right-banner flex justify-end items-end relative">
       <img src="images/banner.png" alt="">
@@ -37,6 +40,95 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <section class="container mx-auto mt-36 text-center">
+    <div class="md:max-w-[60%] mx-auto">
+      <h2 class="text-5xl font-extrabold">Our Featured Products</h2>
+      <p class="text-[#777777] font-medium pt-5 pb-12 ">There are many variations of passages of Lorem Ipsum available,
+        but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+        even slightly believable. </p>
+    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+        <img src="images/tea-1.png" alt="" class="mx-auto">
+        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Milk Tea</h3>
+        <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+      </div>
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+        <img src="images/tea-2.png" alt="" class="mx-auto">
+        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Black Tea</h3>
+        <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+      </div>
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+        <img src="images/tea-3.png" alt="" class="mx-auto">
+        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Lemon Tea</h3>
+        <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+      </div>
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+        <img src="images/tea-4.png" alt="" class="mx-auto">
+        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Green Tea</h3>
+        <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="container mx-auto mt-36 grid grid-cols-1 md:grid-cols-2 gap-12">
+    <div class="grid grid-cols-2 grid-rows-3 gap-8">
+      <div class="bg-linear-to-r from-red-100 to-orange-50 rounded-lg"></div>
+      <div class="bg-[#FCF6E9] pt-14 pb-8 rounded-lg row-span-2"><img src="images/fresh-1.png" alt="" class="mx-auto">
+      </div>
+      <div class="bg-[#EEF1EB] pt-14 pb-8 rounded-lg row-span-2"><img src="images/fresh-2.png" alt="" class="mx-auto">
+      </div>
+      <div class="bg-linear-to-r from-[#DDDDDD] to-white rounded-lg"></div>
+    </div>
+    <div class="space-y-5 md:max-w-4/5 ">
+      <h2 class="text-5xl/tight font-extrabold">Great Tea, Freshly Presented</h2>
+      <p class="text-[#777777] font-semibold">The meaning of gong cha is chanese is to provide the best tea to emperor
+        from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
+        had been deeply appreciated by its custoers because of good words of mouth and unique customized service
+        orginated from Taiwan.</p>
+      <h4 class=" text-2xl font-extrabold">Unique Taste</h4>
+      <p class="text-[#777777] font-semibold">A Unique and different style from other teapots gives a luxurious and
+        minimalist impression</p>
+      <h4 class=" text-2xl font-extrabold">Premium Quality</h4>
+      <p class="text-[#777777] font-semibold">Premium Quality that makes tea more elegant and more durable when you use
+        it.</p>
+    </div>
+  </section>
+
+  <section class="container mx-auto mt-36 py-24 px-20 gap-20 md:gap-0 bg-linear-to-r from-orange-400 to-red-600 rounded-lg grid grid-cols-1 lg:grid-cols-2 relative">
+    <div class="text-white space-y-8 flex flex-col justify-center max-w-[550px]">
+      <h2 class="text-5xl font-extrabold">Meet Our Super Clients</h2>
+      <p class="font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+        believable.</p>
+      <button class="cursor-pointer font-bold text-xl px-6 py-4 bg-white rounded-lg w-max">
+        <span class="bg-linear-to-r from-orange-500 to-red-600 bg-clip-text text-transparent">Show All</span>
+      </button>
+    </div>
+    <div class="relative ml-20">
+      <div class="absolute -left-20 top-1/4 z-2 bg-white p-10 rounded-lg max-w-full">
+        <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold pt-5">Ilham Yuda</h4>
+        <p class="font-medium text-[#5D5A6F]">Businessman</p>
+        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+        <img src="images/circles.png" alt="" class="absolute right-6 bottom-6">
+      </div>
+      <div class="relative bg-white p-10 rounded-lg mb-14 opacity-40">
+        <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold pt-5">Ilham Yuda</h4>
+        <p class="font-medium text-[#5D5A6F]">Businessman</p>
+        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+      </div>
+      <div class="relative bg-white p-10 rounded-lg opacity-40">
+        <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold pt-5">Ilham Yuda</h4>
+        <p class="font-medium text-[#5D5A6F]">Businessman</p>
+        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+      </div>
+    </div>
+    <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0">
   </section>
 
 </body>
