added section (news and events)

--- a/index.html
+++ b/index.html
@@ -131,6 +131,36 @@
     <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0">
   </section>
 
+  <section class="container mx-auto mt-36">
+    <div class="text-center space-y-5 lg:max-w-2/3 mx-auto">
+      <h2 class="text-5xl font-extrabold">News & Events</h2>
+      <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-12">
+      <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
+        <img src="images/news-1.png" alt="" class="w-full">
+        <p class="font-medium text-[#777777]">Feb 14, 2026</p>
+        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+        <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
+      </div>
+      <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
+        <img src="images/news-2.png" alt="" class="w-full">
+        <p class="font-medium text-[#777777]">Feb 14, 2026</p>
+        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+        <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
+      </div>
+      <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
+        <img src="images/news-3.png" alt="" class="w-full">
+        <p class="font-medium text-[#777777]">Feb 14, 2026</p>
+        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+        <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
