added section (footer)

--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
       <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
         <img src="images/tea-1.png" alt="" class="mx-auto">
-        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Milk Tea</h3>
+        <h3 class=" font-extrabold text-xl pt-7 pb-3">Milk Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
       <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
         <img src="images/tea-2.png" alt="" class="mx-auto">
-        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Black Tea</h3>
+        <h3 class=" font-extrabold text-xl pt-7 pb-3">Black Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
       <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
         <img src="images/tea-3.png" alt="" class="mx-auto">
-        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Lemon Tea</h3>
+        <h3 class=" font-extrabold text-xl pt-7 pb-3">Lemon Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
       <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
         <img src="images/tea-4.png" alt="" class="mx-auto">
-        <h3 class=" font-extrabold text-2xl pt-7 pb-3">Green Tea</h3>
+        <h3 class=" font-extrabold text-xl pt-7 pb-3">Green Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
     </div>
@@ -88,10 +88,10 @@
         from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
         had been deeply appreciated by its custoers because of good words of mouth and unique customized service
         orginated from Taiwan.</p>
-      <h4 class=" text-2xl font-extrabold">Unique Taste</h4>
+      <h4 class=" text-xl font-extrabold">Unique Taste</h4>
       <p class="text-[#777777] font-semibold">A Unique and different style from other teapots gives a luxurious and
         minimalist impression</p>
-      <h4 class=" text-2xl font-extrabold">Premium Quality</h4>
+      <h4 class=" text-xl font-extrabold">Premium Quality</h4>
       <p class="text-[#777777] font-semibold">Premium Quality that makes tea more elegant and more durable when you use
         it.</p>
     </div>
@@ -140,26 +140,77 @@
       <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
         <img src="images/news-1.png" alt="" class="w-full">
         <p class="font-medium text-[#777777]">Feb 14, 2026</p>
-        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
         <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
         <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
       </div>
       <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
         <img src="images/news-2.png" alt="" class="w-full">
         <p class="font-medium text-[#777777]">Feb 14, 2026</p>
-        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
         <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
         <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
       </div>
       <div class="border-2 border-[#d8d8d8] rounded-lg p-6 space-y-3">
         <img src="images/news-3.png" alt="" class="w-full">
         <p class="font-medium text-[#777777]">Feb 14, 2026</p>
-        <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+        <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
         <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
         <button class="font-bold hover:bg-stone-300 p-2 rounded-lg duration-150 cursor-pointer -ml-1">Learn More</button>
       </div>
     </div>
   </section>
+
+  <footer class="bg-[#FFEAE7]">
+    <section class="container mx-auto mt-36 py-24">
+      <div class="flex justify-between">
+        <img src="images/cup.png" alt="">
+        <div class="flex items-center gap-10">
+          <p class="font-medium text-xl text-[#494949]">Ready to get started?</p>
+          <button
+          class="cursor-pointer font-bold text-xl px-6 py-4 bg-linear-to-r from-orange-500 to-red-600 rounded-lg text-white">Get Started</button>
+        </div>
+      </div>
+      <div class="mt-24">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center md:text-left gap-20">
+          <ul class="space-y-4">
+            <h3 class="text-xl font-semibold">Quick Links</h3>
+            <li class="text-[#494949]"><a href="">Home</a></li>
+            <li class="text-[#494949]"><a href="">About Us</a></li>
+            <li class="text-[#494949]"><a href="">Insurance</a></li>
+            <li class="text-[#494949]"><a href="">Privacy Policy</a></li>
+          </ul>
+          <ul class="space-y-4">
+            <h3 class="text-xl font-semibold">Our Service</h3>
+            <li class="text-[#494949]"><a href="">Life Insurance</a></li>
+            <li class="text-[#494949]"><a href="">Car Insurance</a></li>
+            <li class="text-[#494949]"><a href="">Health Insurance</a></li>
+            <li class="text-[#494949]"><a href="">House Insurance</a></li>
+          </ul>
+          <ul class="space-y-4">
+            <h3 class="text-xl font-semibold">Help</h3>
+            <li class="text-[#494949]"><a href="">FAQs</a></li>
+            <li class="text-[#494949]"><a href="">Contact Us</a></li>
+          </ul>
+
+          <div>
+            <h3 class="text-2xl font-semibold">Subscribe to our newsletter</h3>
+            <input class="border-b border-[#494949] outline-0 my-10 pb-3 text-xl w-[300px]" type="text" name="" id="" placeholder="Email address">
+            <button class="block md:inline mx-auto -mt-4 cursor-pointer bg-linear-to-r from-orange-500 to-red-600 rounded-full h-10 w-10 text-white"><i class="fa-solid fa-angle-right"></i></button>
+            
+            <ul class="flex text-4xl md:text-3xl mt-20 md:mt-0 space-x-8 md:space-x-3 opacity-70 justify-center md:justify-start"">
+              <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-x-twitter"></i></a></li>
+              <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+  </section>
+    <div class="text-center text-lg mt-12 bg-orange-100 py-5">
+      <p class="font-medium">© 2026 - All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 
