--- a/index.html
+++ b/index.html
@@ -195,9 +195,12 @@
 
           <div>
             <h3 class="text-2xl font-semibold">Subscribe to our newsletter</h3>
-            <input class="border-b border-[#494949] outline-0 my-10 pb-3 text-xl w-[300px]" type="text" name="" id="" placeholder="Email address">
-            <button class="block md:inline mx-auto -mt-4 cursor-pointer bg-linear-to-r from-orange-500 to-red-600 rounded-full h-10 w-10 text-white"><i class="fa-solid fa-angle-right"></i></button>
-            
+
+            <div class="md:flex items-center">
+              <input class="border-b border-[#494949] outline-0 my-10 pb-3 text-xl w-[300px] placeholder:text-center md:placeholder:text-left" type="text" name="" id="" placeholder="Email address">
+              <button class="block md:inline mx-auto -mt-4 cursor-pointer bg-linear-to-r from-orange-500 to-red-600 rounded-full h-10 w-10 text-white"><i class="fa-solid fa-angle-right"></i></button>
+            </div>
+              
             <ul class="flex text-4xl md:text-3xl mt-20 md:mt-0 space-x-8 md:space-x-3 opacity-70 justify-center md:justify-start"">
               <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
               <li><a href=""><i class="fa-brands fa-square-x-twitter"></i></a></li>
