--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="right-banner flex justify-end items-end relative">
       <img src="images/banner.png" alt="">
-      <div class="bg-white flex w-65 p-6 rounded-lg absolute left-1/4 md:left-50 shadow-2xl items-center space-x-4">
+      <div class="bg-white flex w-[260px] p-6 rounded-lg absolute left-1/4 md:left-52 shadow-2xl items-center space-x-4">
         <img src="images/star.png" alt="">
         <div>
           <h2 class="text-3xl font-extrabold">5.00</h2>
@@ -50,22 +50,22 @@
         even slightly believable. </p>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-full">
         <img src="images/tea-1.png" alt="" class="mx-auto">
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Milk Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
-      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-full">
         <img src="images/tea-2.png" alt="" class="mx-auto">
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Black Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
-      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-full">
         <img src="images/tea-3.png" alt="" class="mx-auto">
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Lemon Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
-      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-full">
         <img src="images/tea-4.png" alt="" class="mx-auto">
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Green Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
@@ -108,7 +108,7 @@
       </button>
     </div>
     <div class="relative ml-20">
-      <div class="absolute -left-20 top-1/4 z-2 bg-white p-10 rounded-lg max-w-full">
+      <div class="absolute -left-20 top-1/4 z-20 bg-white p-10 rounded-lg max-w-full">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
@@ -197,11 +197,11 @@
             <h3 class="text-2xl font-semibold">Subscribe to our newsletter</h3>
 
             <div class="md:flex items-center">
-              <input class="border-b border-[#494949] outline-0 my-10 pb-3 text-xl w-[300px] placeholder:text-center md:placeholder:text-left" type="text" name="" id="" placeholder="Email address">
+              <input class="border-b border-[#494949] outline-0 my-10 pb-3 text-xl w-[300px] placeholder:text-center md:placeholder:text-left" type="email" name="" id="" placeholder="Email address">
               <button class="block md:inline mx-auto -mt-4 cursor-pointer bg-linear-to-r from-orange-500 to-red-600 rounded-full h-10 w-10 text-white"><i class="fa-solid fa-angle-right"></i></button>
             </div>
               
-            <ul class="flex text-4xl md:text-3xl mt-20 md:mt-0 space-x-8 md:space-x-3 opacity-70 justify-center md:justify-start"">
+            <ul class="flex text-4xl md:text-3xl mt-20 md:mt-0 space-x-8 md:space-x-3 opacity-70 justify-center md:justify-start">
               <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
               <li><a href=""><i class="fa-brands fa-square-x-twitter"></i></a></li>
               <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
