--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
       </div>
     </div>
-    <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0">
+    <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0 max-w-full hidden md:block">
   </section>
 
   <section class="container mx-auto mt-36">
@@ -164,7 +164,7 @@
   <footer class="bg-[#FFEAE7]">
     <section class="container mx-auto mt-36 py-24">
       <div class="flex justify-between">
-        <img src="images/cup.png" alt="">
+        <img src="images/cup.png" alt="" class="hidden md:inline">
         <div class="flex items-center gap-10">
           <p class="font-medium text-xl text-[#494949]">Ready to get started?</p>
           <button
