--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-14 px-4">
-    <div class="left-banner space-y-8 text-center md:text-left">
+    <div class="left-banner space-y-8 text-center md:text-left pb-10 md:pb-0">
       <h1 class="text-6xl/tight md:text-7xl/tight font-extrabold">It's good tea time at The Tea House</h1>
       <p class="text-[#777777] font-semibold">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
         Taste Buds.</p>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <section class="container mx-auto mt-36 text-center px-4">
+  <section class="container mx-auto mt-20 md:mt-36 text-center px-4">
     <div class="md:max-w-[60%] mx-auto">
       <h2 class="text-5xl font-extrabold">Our Featured Products</h2>
       <p class="text-[#777777] font-medium pt-5 pb-12 ">There are many variations of passages of Lorem Ipsum available,
@@ -73,7 +73,7 @@
     </div>
   </section>
 
-  <section class="container mx-auto mt-36 grid grid-cols-1 md:grid-cols-2 gap-12 px-4">
+  <section class="container mx-auto mt-20 md:mt-36 grid grid-cols-1 md:grid-cols-2 gap-12 px-4">
     <div class="grid grid-cols-2 grid-rows-3 gap-8">
       <div class="bg-linear-to-r from-red-100 to-orange-50 rounded-lg"></div>
       <div class="bg-[#FCF6E9] pt-14 pb-8 rounded-lg row-span-2"><img src="images/fresh-1.png" alt="" class="mx-auto">
@@ -82,8 +82,8 @@
       </div>
       <div class="bg-linear-to-r from-[#DDDDDD] to-white rounded-lg"></div>
     </div>
-    <div class="space-y-5 md:max-w-4/5 ">
-      <h2 class="text-5xl/tight font-extrabold">Great Tea, Freshly Presented</h2>
+    <div class="space-y-5 md:max-w-4/5">
+      <h2 class="text-5xl/tight font-extrabold text-center md:text-left">Great Tea, Freshly Presented</h2>
       <p class="text-[#777777] font-semibold">The meaning of gong cha is chanese is to provide the best tea to emperor
         from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
         had been deeply appreciated by its custoers because of good words of mouth and unique customized service
@@ -97,7 +97,7 @@
     </div>
   </section>
 
-  <section class="container mx-auto mt-36 py-24 px-4 md:px-20 gap-20 md:gap-0 bg-linear-to-r from-orange-400 to-red-600 md:rounded-lg grid grid-cols-1 lg:grid-cols-2 relative">
+  <section class="container mx-auto mt-20 md:mt-36 py-12 md:py-24 px-4 md:px-20 gap-20 md:gap-0 bg-linear-to-r from-orange-400 to-red-600 md:rounded-lg grid grid-cols-1 lg:grid-cols-2 relative">
     <div class="text-white space-y-8 flex flex-col justify-center max-w-[550px]">
       <h2 class="text-5xl font-extrabold">Meet Our Super Clients</h2>
       <p class="font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -131,7 +131,7 @@
     <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0 max-w-full hidden md:block">
   </section>
 
-  <section class="container mx-auto mt-36 px-4">
+  <section class="container mx-auto mt-20 md:mt-36 px-4">
     <div class="text-center space-y-5 lg:max-w-2/3 mx-auto">
       <h2 class="text-5xl font-extrabold">News & Events</h2>
       <p class="font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
@@ -162,9 +162,9 @@
   </section>
 
   <footer class="bg-[#FFEAE7]">
-    <section class="container mx-auto mt-36 px-4 py-24">
+    <section class="container mx-auto mt-20 md:mt-36 px-4 py-12 md:py-24">
       <div class="flex justify-between">
-        <img src="images/cup.png" alt="" ">
+        <img src="images/cup.png" alt="" class="hidden md:block">
         <div class="flex items-center gap-10">
           <p class="font-medium text-xl text-[#494949]">Ready to get started?</p>
           <button
