--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto mt-14 px-4">
     <div class="left-banner space-y-8 text-center md:text-left pb-10 md:pb-0">
-      <h1 class="text-6xl/tight md:text-7xl/tight font-extrabold">It's good tea time at The Tea House</h1>
+      <h1 class="text-6xl/tight md:text-7xl/tight max-w-[550px] font-extrabold">It's good tea time at The Tea House</h1>
       <p class="text-[#777777] font-semibold">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
         Taste Buds.</p>
       <button
@@ -74,7 +74,7 @@
   </section>
 
   <section class="container mx-auto mt-20 md:mt-36 grid grid-cols-1 md:grid-cols-2 gap-12 px-4">
-    <div class="grid grid-cols-2 grid-rows-3 gap-8">
+    <div class="grid grid-cols-2 grid-rows-3 gap-2 md:gap-8">
       <div class="bg-linear-to-r from-red-100 to-orange-50 rounded-lg"></div>
       <div class="bg-[#FCF6E9] pt-14 pb-8 rounded-lg row-span-2"><img src="images/fresh-1.png" alt="" class="mx-auto">
       </div>
@@ -112,20 +112,20 @@
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
-        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+        <img src="images/client.png" alt="" class="absolute -top-7 left-0 md:-left-7  bg-white p-1 rounded-full">
         <img src="images/circles.png" alt="" class="absolute right-6 bottom-6">
       </div>
       <div class="relative bg-white p-10 rounded-lg mb-14 opacity-40">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
-        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+        <img src="images/client.png" alt="" class="absolute -top-7 left-0 md:-left-7 bg-white p-1 rounded-full">
       </div>
       <div class="relative bg-white p-10 rounded-lg opacity-40">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
-        <img src="images/client.png" alt="" class="absolute -top-7 -left-7 bg-white p-1 rounded-full">
+        <img src="images/client.png" alt="" class="absolute -top-7 left-0 md:-left-7 bg-white p-1 rounded-full">
       </div>
     </div>
     <img src="images/bg_cup.png" alt="" class="absolute left-1/4 bottom-0 max-w-full hidden md:block">
