--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
       </button>
     </div>
     <div class="relative ml-20">
-      <div class="absolute -left-20 top-1/4 z-20 bg-white p-10 rounded-lg max-w-full">
+      <div class="absolute -left-20 top-1/4 z-20 bg-white pt-12 pb-6 px-6 md:p-10 rounded-lg max-w-full">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
         <img src="images/client.png" alt="" class="absolute -top-7 left-0 md:-left-7  bg-white p-1 rounded-full">
         <img src="images/circles.png" alt="" class="absolute right-6 bottom-6">
       </div>
-      <div class="relative bg-white p-10 rounded-lg mb-14 opacity-40">
+      <div class="relative bg-white pt-12 pb-6 px-6 md:p-10 rounded-lg mb-14 opacity-40">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
         <img src="images/client.png" alt="" class="absolute -top-7 left-0 md:-left-7 bg-white p-1 rounded-full">
       </div>
-      <div class="relative bg-white p-10 rounded-lg opacity-40">
+      <div class="relative bg-white pt-12 pb-6 px-6 md:p-10 rounded-lg opacity-40">
         <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold pt-5">Ilham Yuda</h4>
         <p class="font-medium text-[#5D5A6F]">Businessman</p>
