--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <section class="container mx-auto mt-20 md:mt-36 grid grid-cols-1 md:grid-cols-2 gap-12 px-4">
-    <div class="grid grid-cols-2 grid-rows-3 gap-2 md:gap-8">
+    <div class="grid grid-cols-2 grid-rows-3 gap-2 md:gap-8 order-2 md:order-1">
       <div class="bg-linear-to-r from-red-100 to-orange-50 rounded-lg"></div>
       <div class="bg-[#FCF6E9] pt-14 pb-8 rounded-lg row-span-2"><img src="images/fresh-1.png" alt="" class="mx-auto">
       </div>
@@ -82,7 +82,7 @@
       </div>
       <div class="bg-linear-to-r from-[#DDDDDD] to-white rounded-lg"></div>
     </div>
-    <div class="space-y-5 md:max-w-4/5">
+    <div class="space-y-5 md:max-w-4/5 order-1 md:order-2">
       <h2 class="text-5xl/tight font-extrabold text-center md:text-left">Great Tea, Freshly Presented</h2>
       <p class="text-[#777777] font-semibold">The meaning of gong cha is chanese is to provide the best tea to emperor
         from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
