--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Lemon Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
       </div>
-      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg p-10 max-w-full">
+      <div class="card bg-linear-to-b from-stone-100 to-white rounded-lg px-10 pt-10 md:p-10 max-w-full">
         <img src="images/tea-4.png" alt="" class="mx-auto">
         <h3 class=" font-extrabold text-xl pt-7 pb-3">Green Tea</h3>
         <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
